--- a/api-cuisine/Cargo.toml
+++ b/api-cuisine/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2021"
 
 [dependencies]
 rocket = "0.5.0-rc.1"
+elasticsearch = "7.14.0-alpha.1"
+serde = "1.0.136"
+serde_json = "1.0.79"
+openssl-sys = "0.9.72"
+dotenv = "0.15.0"
