--- a/api-cuisine/Cargo.toml
+++ b/api-cuisine/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "0.5.0-rc.1"
+rocket = {version = "0.5.0-rc.1", features = ["json"]}
 elasticsearch = "7.14.0-alpha.1"
-serde = "1.0.136"
+elastiql = {version = "0.5.0", features = ["graphql"]}
+serde = {version = "1.0.136", features = ["derive"]}
 serde_json = "1.0.79"
 openssl-sys = "0.9.72"
 dotenv = "0.15.0"
+anyhow = "1.0"
