--- a/api-cuisine/Cargo.toml
+++ b/api-cuisine/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 
 [dependencies]
 rocket = {version = "0.5.0-rc.1", features = ["json"]}
+rocket_okapi = { version = "0.8.0-rc.1", features=["swagger","rapidoc"]}
+schemars = "0.8.8"
 elasticsearch = "7.14.0-alpha.1"
 elastiql = {version = "0.5.0", features = ["graphql"]}
 serde = {version = "1.0.136", features = ["derive"]}
